    field.
 * New option on groups: first_initial, which only works on names, but
    causes them to be grouped by surname and only the first letter of the 
    given name.

2008-04-17 tdb
 * Removed redundant, unused "tags_and_labels" from DataObjs
 * BibTeX import
 	- fixed numeric ids not being parsed correctly
	- ignore the case of NAMES
	- don't decode_latex URLs or URIs

2008-04-25 tdb
 * Prevent uploaded PHP scripts from being executed

2008-04-29 cjg
 * Added "schema" option to epadmin
 * Added XML::tidy to schema exporter

2008-04-30 tdb
 * Output a short list of commands with no arguments to epadmin
 * Clean up the list object in epadmin schema

2008-05-12 tdb
 * Changed ordervalues columns to LONGTEXT from TEXT, fixing #3369
 * Check current_user exists before accessing it in Subject plugin
 * UTF8 => utf-8 in email charset, fixing #3370

2008-05-13 tdb
 * Check tables exist before attempting to create them when creating dataset tables (allows update_database_structure to "fill in the gaps")

2008-05-16 cjg 
 * Fixed bug in toolbox which prevented searching sub-objects and linked items.

2008-05-16 cjg 
 * Added boxes plugin system for EPrint summary pages.

2008-05-16 cjg 
 * Improved text-browsing for Items and Review screen-- use of alt tags on icons.

2008-05-16 cjg 
 * Added AJAX Phrase editor!

2008-05-19 tdb
 * Secured oai_accesslogs script
 * Fixed bug in Session::get_secure that returned false in Auth stage

2008-05-20 cjg
 * new Script option: as_string, which converts a typed value to a plain string. Useful for inserting a value into an attribute.
 * epc:phrase refs now expound out {} so values from the object can be used to build the phrase id.
 * Redesigned document citation to be neater and show all fields.
  
2008-05-20 cjg
 * Fixed some minor warnings in Views.pm
 * Added divisions to default eprint summary page.
 * Made subjects inside a "ifset" in summary page.
 * Added a divisions view.